# calculator

./: CMakeLists.txt  README.md  calculator  calculator.service
deploy/: calculator-service_1.4.0_amd64.deb
include/: app.h  cache.h  calculator.h  command_parser.h  logger.h  server.h
include/DB/: databaseconnection.h  databasemanager.h  databaseresult.h  databasestatement.h
src/: app.cpp  cache.cpp  calculator.cpp  command_parser.cpp  logger.cpp  main.cpp  server.cpp
src/DB/: databaseconnection.cpp  databasemanager.cpp  databaseresult.cpp  databasestatement.cpp
tests/: CMakeLists.txt  test_app.cpp  test_calculator.cpp  test_client.cpp  test_command_parser.cpp
